force-app/main/default/objects/companyData__c/companyData__c.object-meta.xml
<CustomObject>
    <label>CompanyData</label>
    <nameField>
        <label>Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CompanyData</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>