force-app/main/default/objects/companyData__c/fields/Last_4_Digits_of_Credit_Card__c.field-meta.xml
<CustomField>
    <fullName>Last_4_Digits_of_Credit_Card__c</fullName>
    <label>Last 4 Digits of Credit Card</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>