force-app/main/default/objects/companyData__c/fields/last_payment_date__c.field-meta.xml
<CustomField>
    <fullName>last_payment_date__c</fullName>
    <label>last_payment_date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>