force-app/main/default/objects/companyData__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <label>Payment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>