force-app/main/default/objects/companyData__c/fields/referred_on__c.field-meta.xml
<CustomField>
    <fullName>referred_on__c</fullName>
    <label>referred on</label>
    <length>255</length>
    <type>Text</type>
</CustomField>