force-app/main/default/objects/companyData__c/fields/referrer_by__c.field-meta.xml
<CustomField>
    <fullName>referrer_by__c</fullName>
    <label>referred by</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>