force-app/main/default/objects/companyData__c/recordTypes/CompanyInfo.recordType-meta.xml
<RecordType>
    <fullName>CompanyInfo</fullName>
    <active>true</active>
    <label>CompanyInfo</label>
</RecordType>