force-app/main/default/objects/companyData__c/recordTypes/Referrals.recordType-meta.xml
<RecordType>
    <fullName>Referrals</fullName>
    <active>true</active>
    <label>Referrals</label>
</RecordType>